# hechi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hatch.toml  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/hechi/: __about__.py  __init__.py  __main__.py  error.py  logger.py
src/hechi/commands/: __init__.py  abc.py  encrypt.py  encrypt_dir.py  encrypt_file.py  license.py
src/hechi/core/: docstring.py
src/hechi/utils/: env.py
src/hechi/utils/checks/: __init__.py  error.py  path.py
