[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hechi"
dynamic = ["version"]
description = "Protect your Python code easily with Hechi!"
authors = [{ name = "Taeho Kim", email = "hechi.python@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/hechi-python/hechi"